redhat/rhoai/v3.5/base/03-workloads/agents/stale-image-finder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stale-image-finder-dashboard
  labels:
    app: stale-image-finder
    app.kubernetes.io/part-of: stale-image-finder
spec:
  selector:
    app: stale-image-finder
  ports:
  - name: dashboard
    port: 9119
    targetPort: 9119
  - name: api
    port: 8642
    targetPort: 8642
  type: ClusterIP
